manifests/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar-voluntario-ingress
  namespace: radar-voluntario-development
  annotations:
    # cert-manager.io/cluster-issuer: cert-manager-global
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-productionn
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true" 
    
spec:
  tls:
    - hosts:
        - dev.radarvoluntario.com
      secretName: radarvoluntario-certificate
  rules:
    - host: dev.radarvoluntario.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-app-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node-api-service
                port:
                  number: 80
